@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.127 2008/05/29 17:53:50 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.128 2008/05/31 10:23:57 vapier Exp $
+
+*timezone-data-2008c (31 May 2008)
+
+  31 May 2008; Mike Frysinger <vapier@gentoo.org>
+  +timezone-data-2008c.ebuild:
+  Version bump #223827 by Rodrigo Severo.
 
   29 May 2008; Raúl Porcel <armin76@gentoo.org> timezone-data-2008b.ebuild:
   alpha/ia64/sparc/x86 stable
